<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".Formulario2">

    <TextView
        android:id="@+id/textCabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/cabecera"
        android:textSize="24sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCabecera"
        android:text="@string/nombreMuestra"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNombre"
        android:text="@string/fechaPrueba"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFecha"
        android:text="@string/TelefMuestra"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTel"
        android:text="@string/EmailMuestra"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textDescrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEmail"
        android:text="@string/DescripMuestra"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@id/textDescrip"
        android:text="@string/btnEditar"
        android:layout_marginTop="40dp"
        android:onClick="editDatos"/>


</LinearLayout>